[package]
name = "tracing_vec"

version = "0.1.0"
authors = ["Jan Růžička <jan.ruzicka01@gmail.com>"]
license-file = "LICENSE"

edition = "2018"

description = "Vector which keeps track of movement of its elements."

homepage = "https://github.com/ruza-net/tracing_vec"
repository = "https://github.com/ruza-net/tracing_vec"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
